# mtcnn-jni

./: README.md  readme.txt
java/: test_result.txt
java/mtcnn/: Box.java  Mtcnn.java  Test.java
lib/: libmtcnn.so.single
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mtcnn.cpp  mtcnn.h  mtcnn_jni_single.cpp  mtcnn_multi_jni.cpp
